--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ build/classes/test/TimeConversionTest.class
 .idea/vcs.xml
 build/classes/main/BiggerIsGreater.class
 build/classes/test/BiggerIsGreaterTest.class
+build
